Fix contrast issues

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
 
 .logo {
   text-decoration: none;
-  color: #6070ff;
+  color: #1C32FF;
 }
 
 .main-menu {
@@ -115,7 +115,7 @@ header {
 
 .connect {
   align-self: flex-start;
-  color: #7f8cff;
+  color: #1c32ff;
   font-size: 18px;
   line-height: 24px;
   margin-top: 15px;
@@ -197,7 +197,7 @@ header {
 
 .desc h4 {
   font-size: 13px;
-  color: #344563;
+  color: #172b4d;
   text-transform: uppercase;
   padding-bottom: 20px;
 }
@@ -208,7 +208,7 @@ header {
 
 .desc h4 span {
   padding-right: 0 12px;
-  color: #7a869a;
+  color: #172b4d;
   text-transform: capitalize;
 }
 
@@ -235,7 +235,7 @@ header {
   font-size: 12px;
   line-height: 16px;
   font-weight: 500;
-  color: #6070ff;
+  color: #0516b1;
   letter-spacing: 0.03em;
   margin-right: 8px;
 }
@@ -251,12 +251,12 @@ header {
 
 .button {
   padding: 12px;
-  border: 1px solid #7f8cff;
+  border: 1px solid #485aff;
   background-color: white;
   border-radius: 8px;
   font-size: 17px;
   letter-spacing: 0.03em;
-  color: #6070ff;
+  color: #1C32FF;
   font-weight: 500;
   line-height: 24px;
   align-self: flex-start;
@@ -335,7 +335,7 @@ header {
 }
 
 .contact-wrapper {
-  background-color: #6070ff;
+  background-color: #2b40fa;
   border-top-left-radius: 50px;
   padding: 100px 24px 0 24px;
   display: flex;
@@ -359,7 +359,7 @@ header {
   font-size: 20px;
   font-weight: 400;
   line-height: 28px;
-  color: white;
+  color: #ffffff;
 }
 
 #form {
@@ -570,8 +570,7 @@ header {
   }
 
   .contact-description {
-    color: #ebebff;
-    font-size: 22px;
+    font-size: 24px;
   }
 
   form {
